# insight_loops_backend

./: .env.example  main.py  pyproject.toml
src/app/: main.py
src/app/core/: auth.py  config.py  dependencies.py  exceptions.py  supabase.py
src/app/domain/entities/: user.py
src/app/domain/repositories/: user_repository.py
src/app/domain/services/: auth_service.py  user_service.py
src/app/infrastructure/database/: connection.py  models.py
src/app/infrastructure/repositories/: user_repository_impl.py
src/app/infrastructure/supabase/: realtime_service.py  supabase_repository.py
src/app/presentation/api/: dependencies.py
src/app/presentation/api/v1/: router.py
src/app/presentation/api/v1/endpoints/: auth.py  users.py
src/app/presentation/schemas/: auth.py  user.py
