[project]
name = "insight-loops"
version = "0.1.0"
description = "Super ia project"
authors = [{ name = "Miller Oliveira", email = "miller00315@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "alembic==1.16.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "bcrypt==4.3.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "click==8.2.1",
    "cryptography==45.0.2",
    "deprecation==2.1.0",
    "ecdsa==0.19.1",
    "fastapi==0.115.12",
    "frozenlist==1.6.0",
    "gotrue==2.12.0",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "hyperframe==6.1.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "mcp==1.9.1",
    "multidict==6.4.4",
    "packaging==25.0",
    "passlib==1.7.4",
    "pluggy==1.6.0",
    "postgrest==1.0.2",
    "propcache==0.3.1",
    "pyasn1==0.4.8",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pyjwt==2.10.1",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-jose==3.4.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "realtime==2.4.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "sse-starlette==2.3.5",
    "starlette==0.46.2",
    "storage3==0.11.3",
    "strenum==0.4.15",
    "supabase==2.15.1",
    "supafunc==0.9.4",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "uuid==1.30",
    "uvicorn==0.34.2",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "websockets==14.2",
    "yarl==1.20.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
